# PBH_Quiz

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_delete_classroom.py
quiz_sessions/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
quiz_sessions/migrations/: 0001_initial.py
quizzes/: models.py  serializers.py  tests.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_quiz_classroom_quiz_grade.py  0003_remove_quiz_classroom.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_userprofile_classroom.py
